src/tests/cases/snapshots/bandwhich__tests__cases__ui__one_packet_of_traffic.snap
---
source: src/tests/cases/ui.rs
expression: terminal_draw_events.lock().unwrap().join(SNAPSHOT_SECTION_SEPARATOR)
---
IF: interface_name | Total Rate (Up / Down): 0.00B / 0.00B                                                                                                                                    
âUtilization by process nameââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââUtilization by remote addressâââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââ
âProcess                            PID             Connections     Rate (Up / Down)          ââRemote Address                              Connections       Rate (Up / Down)               â
â                                                                                             ââ                                                                                             â
â                                                                                             ââ                                                                                             â
â                                                                                             ââ                                                                                             â
â                                                                                             ââ                                                                                             â
â                                                                                             ââ                                                                                             â
â                                                                                             ââ                                                                                             â
â                                                                                             ââ                                                                                             â
â                                                                                             ââ                                                                                             â
â                                                                                             ââ                                                                                             â
â                                                                                             ââ                                                                                             â
â                                                                                             ââ                                                                                             â
â                                                                                             ââ                                                                                             â
â                                                                                             ââ                                                                                             â
â                                                                                             ââ                                                                                             â
â                                                                                             ââ                                                                                             â
â                                                                                             ââ                                                                                             â
â                                                                                             ââ                                                                                             â
â                                                                                             ââ                                                                                             â
â                                                                                             ââ                                                                                             â
â                                                                                             ââ                                                                                             â
â                                                                                             ââ                                                                                             â
ââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââ
âUtilization by connectionââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââ
âConnection                                                                                                           Process                                Rate (Up / Down)                â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
ââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââ
 Press <SPACE> to pause. Use <TAB> to rearrange tables. (DNS queries hidden).                                                                                                                 

--- SECTION SEPARATOR ---
                                             21. 0B / 0. 0B                                                                                                                                   
                                                                                                                                                                                              
                                                                                                                                                                                              
 1                                  1               1               21.00B / 0.00B              1.1.1.1                                     1                 21.00B / 0.00B                  
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
 <interface_name>:443 => 1.1.1.1:12345 (tcp)                                                                          1                                      21.00B / 0.00B
